--- a/styles/style.css
+++ b/styles/style.css
@@ -406,6 +406,7 @@ h1 {
   background-color: #fff;
   opacity: 0;
   border-radius: 5px;
+  overflow-x: hidden;
 }
 
 .portfolio > div:nth-of-type(2n - 1) {
